# Distributed-Systems-Project

./: .dockerignore  .gitignore  .project  Dockerfile  Dockerfile.postgres  README.md  app.py  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml
Frontend/ProjectPlanning/: index.html  package-lock.json  package.json
Frontend/ProjectPlanning/src/: App.tsx  index.css
Frontend/ProjectPlanning/src/components/common/: AppendButton.tsx  CircleCheckbox.tsx  DateInput.tsx  (+4 more)
Frontend/ProjectPlanning/src/services/: api.ts
Frontend/ProjectPlanning/src/types/: types.ts
app/: .project  pom.xml
app/diagrams/: Proyecto - 1.0-1.0.proc
src/: __init__.py
src/config/: config.py
src/core/: database.py  seed_data.py
src/core/observation/: model.py  services.py
src/core/project/: model.py  services.py
src/core/stage/: model.py  services.py
src/core/validators/: observation.py  project.py  stage.py
src/routes/: bonita_api.py
src/servicios/: bonita_service.py
src/templates/: index.html
src/web/: blueprints.py
src/web/controllers/: bonita_api.py  bonita_controller.py  monitoring_controller.py  project_controller.py  stage.py  stage_controller.py
src/web/handlers/: authentication.py  helpers.py
src/web/services/: bonita_service.py  observation_service.py  project_service.py  stage_service.py
src/web/static/css/: style.css
src/web/templates/: base.html  home.html
src/web/templates/auth/: login.html
src/web/templates/partials/: _footer.html  _navbar.html
src/web/templates/project/: create_project.html  list_observations.html
(+13 files in other folders)
